--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -7,6 +7,15 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    env:
+      VITE_USE_MOCK_SERVICES: 'true'
+      VITE_FIREBASE_API_KEY: 'demo-api-key'
+      VITE_FIREBASE_AUTH_DOMAIN: 'demo-project.firebaseapp.com'
+      VITE_FIREBASE_PROJECT_ID: 'demo-project'
+      VITE_FIREBASE_STORAGE_BUCKET: 'demo-project.appspot.com'
+      VITE_FIREBASE_MESSAGING_SENDER_ID: '123456789'
+      VITE_FIREBASE_APP_ID: '1:123456789:web:abcdef123456'
+      VITE_FLIGHT_API_PROVIDER: 'demo'
     steps:
       - uses: actions/checkout@v3
       
@@ -20,7 +29,7 @@ jobs:
         run: npm ci
       
       - name: Build
-        run: npm run build
+        run: npm run build:ci
       
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
