--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --force",
     "build": "vite build",
     "build:check": "vue-tsc && vite build",
+    "build:ci": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
