--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -28,8 +28,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Build
-        run: npm run build:ci
+      - name: Direct Vite Build (Skip TS)
+        run: npx vite build --config vite.config.build.js
+      
+      - name: List build output
+        run: ls -la dist
       
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
