--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
       
       - name: Install dependencies
@@ -34,10 +34,20 @@ jobs:
       - name: List build output
         run: ls -la dist
       
-      - name: Deploy to Firebase
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Deploy to Firebase (Method 1)
+        id: deploy1
+        continue-on-error: true
+        uses: FirebaseExtended/action-hosting-deploy@v0.7.1
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FLIGHT_DASHBOARD_APP }}'
           channelId: live
           projectId: flight-dashboard-app
+          
+      - name: Deploy to Firebase (Method 2 - Fallback)
+        if: steps.deploy1.outcome == 'failure'
+        run: |
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_FLIGHT_DASHBOARD_APP }}" > firebase-service-account.json
+          export GOOGLE_APPLICATION_CREDENTIALS="./firebase-service-account.json"
+          npm install -g firebase-tools@12.4.7
+          firebase deploy --only hosting --project flight-dashboard-app --non-interactive
